added: Documented More endpoints.
